--- a/style.css
+++ b/style.css
@@ -50,6 +50,25 @@ h1 {
     outline: none;
 }
 
+#control {
+    display: flex;
+    border-color: whitesmoke;
+    height: 60px;
+    justify-content: flex-start;
+    width: auto;
+    margin-right: auto;
+    margin-left: 100px;
+}
+
+#control button {
+    background-color: black;
+    color: whitesmoke;
+    font-family: 'Press Start 2P', 'Courier New', Courier, monospace;
+    width: 100%;
+    height: 100%;
+    align-self: flex-start;
+}
+
 #gameboard {
     background-color: whitesmoke;
     width: 500px;
@@ -70,8 +89,8 @@ h1 {
 #playInfo {
     display: flex;
     margin-top: 5%;
-    width: 200px;
-    height: 100px;
+    width: 300px;
+    height: 150px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -93,6 +112,7 @@ h1 {
     border: 1px solid;
     background-color: gray;
 }
+
 
 #switch {
     display: flex;
